--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,8 @@ dependencies {
     compile 'com.koushikdutta.ion:ion:2.1.9'
     compile 'com.github.markomilos:paginate:0.5.1'
     compile 'com.akexorcist:RoundCornerProgressBar:2.0.3'
-  //  compile 'com.github.boxme:squarecamera:1.1.0'
+    // retrofit, gson
+    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
 }
